test/instance-checks-2.err.expect
test/instance-checks-2.ktn:1:1: error: cannot solve scalar type constraint t1 = t2
test/instance-checks-2.ktn:1:1: note: t1 (type of x) is from here
test/instance-checks-2.ktn:1:1: note: t2 (from example) is from here
